[package]
name = "gdunsafe"
version = "0.1.0"
authors = ["Hrafn Orri Hrafnkelsson"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ironpeak/gdunsafe"
description = """
Macros for godot-rust to hide away some of the common patterns used when working with resources that are shared with the Godot engine.
"""
keywords = ["gamedev", "godot"]
categories = ["game-development"]
edition = "2021"
include = ["src/", "LICENSE-*", "README.md", "COPYRIGHT"]

[dev-dependencies]
gdnative = "0.10.0"
